# ai-radio

./: .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
ai_radio/: codex_jobs.py  codex_worker.py  config.py  db.py  generator_prompt.py  main.py  models.py  research.py  scheduler.py  service.py  tts.py
config/searxng/: settings.yml
docs/: run-in-ubuntu-on-wsl.md  run-in-windows.md
docs/errors/: docker-compose-startup-errors.md
static/: index.html
tests/: test_codex_worker.py  test_db.py  test_models.py  test_research.py  test_tts.py
